# log-redactor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
log_redactor/: __init__.py  core.py  logging_filter.py  patterns.py
tests/: test_core.py  test_logging_filter.py
